# polytical-ai-assistant

./: .env.example  .gitignore  README.md  ingest.py  political_assistant.py  pyproject.toml  rag_pipeline.py  requirements.txt
.devcontainer/: devcontainer.json
