[tool.poetry]
name = "political-compass-rag"
version = "0.1.0"
description = "RAG-ассистент для анализа программ политических партий России"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
streamlit = ">=1.32.0"
langchain = ">=0.2.0"
langchain-community = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-huggingface = ">=0.0.3"
faiss-cpu = ">=1.8.0"
sentence-transformers = ">=2.7.0"
pypdf = ">=4.2.0"
python-dotenv = ">=1.0.0"
openai = ">=1.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = "ingest:main"
